force-app/main/default/objects/CEMS_Training__c/CEMS_Training__c.object-meta.xml
<CustomObject>
    <label>Training</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Training ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>