force-app/main/default/objects/CEMS_Training__c/fields/CEMS_Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Certificate_Name__c</fullName>
    <label>Certificate Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>