force-app/main/default/objects/CEMS_Training__c/fields/CEMS_Description__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>