force-app/main/default/objects/CEMS_Training__c/fields/CEMS_Designated_Days__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Designated_Days__c</fullName>
    <label>Designated Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>