force-app/main/default/objects/CEMS_Training__c/fields/CEMS_Registration_URL__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Registration_URL__c</fullName>
    <label>Registration URL</label>
    <type>Url</type>
</CustomField>