force-app/main/default/objects/CEMS_Training__c/fields/CEMS_Resource_URl__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Resource_URl__c</fullName>
    <label>Resource URl</label>
    <type>Url</type>
</CustomField>