force-app/main/default/objects/CEMS_Training__c/fields/Certificate_Level__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Level__c</fullName>
    <description>Level of certification done</description>
    <label>Certificate Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>