force-app/main/default/objects/CEMS_Training__c/recordTypes/Certificates.recordType-meta.xml
<RecordType>
    <fullName>Certificates</fullName>
    <active>true</active>
    <label>Certificates</label>
</RecordType>