force-app/main/default/objects/CEMS_Training__c/recordTypes/Learnings.recordType-meta.xml
<RecordType>
    <fullName>Learnings</fullName>
    <active>true</active>
    <label>Learnings</label>
</RecordType>