force-app/main/default/objects/CEMS_Training__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>CEMS_Certificate_Name__c</columns>
    <columns>CEMS_Learning_Name__c</columns>
    <columns>CEMS_Mandatory__c</columns>
    <columns>Certificate_Level__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>